// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StructTable should render 1`] = `
<div
  style={
    Object {
      "overflowX": "hidden",
    }
  }
>
  <Table
    columns={
      Array [
        Object {
          "className": "structTableTd",
          "dataIndex": "arr",
          "render": [Function],
          "title": "数组",
        },
        Object {
          "className": "structTableTd",
          "dataIndex": "str",
          "render": [Function],
          "title": "字符串",
        },
        Object {
          "className": "structTableTd",
          "dataIndex": "int",
          "render": [Function],
          "title": "数组",
        },
        Object {
          "className": "structTableTd",
          "dataIndex": "ip",
          "render": [Function],
          "title": "IP地址",
        },
        Object {
          "className": "structTableTd",
          "dataIndex": "enum",
          "render": [Function],
          "title": "枚举",
        },
        Object {
          "className": "structTableTd",
          "dataIndex": "date",
          "render": [Function],
          "title": "日期",
        },
        Object {
          "className": "structTableTd",
          "dataIndex": "datetime",
          "render": [Function],
          "title": "时间",
        },
        Object {
          "className": "structTableTd",
          "dataIndex": "enums",
          "render": [Function],
          "title": "枚举多选",
        },
        Object {
          "className": "structTableTd",
          "dataIndex": "operation",
          "render": [Function],
          "title": "操作",
        },
      ]
    }
    dataSource={
      Array [
        Object {
          "arr": Array [
            "abc",
            "def",
          ],
          "date": "2019-05-24",
          "datetime": "2019-05-24 12:00:00",
          "enum": "1",
          "enums": Array [
            "1",
            "3",
          ],
          "int": 1000,
          "ip": "0.0.0.0",
          "str": "string",
        },
        Object {
          "arr": Array [
            "ppp",
          ],
          "date": "2019-05-23",
          "datetime": "2019-05-24 23:00:00",
          "enum": "5",
          "enums": Array [
            "1",
            "3",
            "5",
          ],
          "int": 100,
          "ip": "10.0.0.0",
          "str": "string2",
        },
      ]
    }
    pagination={false}
    rowKey="key"
    scroll={
      Object {
        "x": "max-content",
      }
    }
  />
</div>
`;

exports[`StructTable should render 2`] = `
<div
  style={
    Object {
      "overflowX": "hidden",
    }
  }
>
  <Table
    columns={
      Array [
        Object {
          "className": "structTableTd",
          "dataIndex": "arr",
          "render": [Function],
          "title": "数组",
        },
        Object {
          "className": "structTableTd",
          "dataIndex": "str",
          "render": [Function],
          "title": "字符串",
        },
        Object {
          "className": "structTableTd",
          "dataIndex": "int",
          "render": [Function],
          "title": "数组",
        },
        Object {
          "className": "structTableTd",
          "dataIndex": "ip",
          "render": [Function],
          "title": "IP地址",
        },
        Object {
          "className": "structTableTd",
          "dataIndex": "enum",
          "render": [Function],
          "title": "枚举",
        },
        Object {
          "className": "structTableTd",
          "dataIndex": "date",
          "render": [Function],
          "title": "日期",
        },
        Object {
          "className": "structTableTd",
          "dataIndex": "datetime",
          "render": [Function],
          "title": "时间",
        },
        Object {
          "className": "structTableTd",
          "dataIndex": "enums",
          "render": [Function],
          "title": "枚举多选",
        },
        Object {
          "className": "structTableTd",
          "dataIndex": "operation",
          "render": [Function],
          "title": "操作",
        },
      ]
    }
    dataSource={
      Array [
        Object {
          "arr": Array [
            "abc",
            "def",
          ],
          "date": "2019-05-24",
          "datetime": "2019-05-24 12:00:00",
          "enum": "1",
          "enums": Array [
            "1",
            "3",
          ],
          "int": 1000,
          "ip": "0.0.0.0",
          "str": "string",
        },
      ]
    }
    pagination={false}
    rowKey="key"
    scroll={
      Object {
        "x": "max-content",
      }
    }
  />
</div>
`;

exports[`StructTable should render 3`] = `
<div>
  <Button
    block={false}
    ghost={false}
    htmlType="button"
    icon={<ForwardRef(EditOutlined) />}
    loading={false}
    onClick={[Function]}
    type="link"
  />
  <Button
    block={false}
    ghost={false}
    htmlType="button"
    icon={<ForwardRef(DeleteOutlined) />}
    loading={false}
    onClick={[Function]}
    type="link"
  />
  <AddStructModal
    attribute={
      Object {
        "id": "struct",
        "name": "结构体",
        "value": Object {
          "struct_define": Array [
            Object {
              "id": "arr",
              "name": "数组",
              "type": "arr",
            },
            Object {
              "id": "str",
              "name": "字符串",
              "type": "str",
            },
            Object {
              "id": "int",
              "name": "数组",
              "type": "int",
            },
            Object {
              "id": "ip",
              "name": "IP地址",
              "type": "ip",
            },
            Object {
              "id": "enum",
              "name": "枚举",
              "regex": Array [
                "1",
                "3",
                "5",
                "7",
                "9",
              ],
              "type": "enum",
            },
            Object {
              "id": "date",
              "name": "日期",
              "type": "date",
            },
            Object {
              "id": "datetime",
              "name": "时间",
              "type": "datetime",
            },
            Object {
              "id": "enums",
              "name": "枚举多选",
              "regex": Array [
                "1",
                "3",
                "5",
                "7",
                "9",
              ],
              "type": "enums",
            },
          ],
          "type": "structs",
        },
      }
    }
    handleCancelFunction={[Function]}
    handleStoreFunction={[Function]}
    structData={
      Object {
        "arr": Array [
          "abc",
          "def",
        ],
        "date": "2019-05-24",
        "datetime": "2019-05-24 12:00:00",
        "enum": "1",
        "enums": Array [
          "1",
          "3",
        ],
        "int": 1000,
        "ip": "0.0.0.0",
        "str": "string",
      }
    }
    visible={false}
  />
</div>
`;

exports[`StructTable should render 4`] = `
<div>
  <Button
    block={false}
    ghost={false}
    htmlType="button"
    icon={<ForwardRef(EditOutlined) />}
    loading={false}
    onClick={[Function]}
    type="link"
  />
  <Button
    block={false}
    ghost={false}
    htmlType="button"
    icon={<ForwardRef(DeleteOutlined) />}
    loading={false}
    onClick={[Function]}
    type="link"
  />
  <AddStructModal
    attribute={
      Object {
        "id": "struct",
        "name": "结构体",
        "value": Object {
          "struct_define": Array [
            Object {
              "id": "arr",
              "name": "数组",
              "type": "arr",
            },
            Object {
              "id": "str",
              "name": "字符串",
              "type": "str",
            },
            Object {
              "id": "int",
              "name": "数组",
              "type": "int",
            },
            Object {
              "id": "ip",
              "name": "IP地址",
              "type": "ip",
            },
            Object {
              "id": "enum",
              "name": "枚举",
              "regex": Array [
                "1",
                "3",
                "5",
                "7",
                "9",
              ],
              "type": "enum",
            },
            Object {
              "id": "date",
              "name": "日期",
              "type": "date",
            },
            Object {
              "id": "datetime",
              "name": "时间",
              "type": "datetime",
            },
            Object {
              "id": "enums",
              "name": "枚举多选",
              "regex": Array [
                "1",
                "3",
                "5",
                "7",
                "9",
              ],
              "type": "enums",
            },
          ],
          "type": "structs",
        },
      }
    }
    handleCancelFunction={[Function]}
    handleStoreFunction={[Function]}
    structData={
      Object {
        "arr": Array [
          "abc",
          "def",
        ],
        "date": "2019-05-24",
        "datetime": "2019-05-24 12:00:00",
        "enum": "1",
        "enums": Array [
          "1",
          "3",
        ],
        "int": 1000,
        "ip": "0.0.0.0",
        "str": "string",
      }
    }
    visible={false}
  />
</div>
`;
